# Sourcetrail

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
archive/: .gitignore
archive/projects/: Linux-System-Clang-Release.srctrlprj  Linux-Vcpkg-Release-Directory.srctrlprj
cmake/: Sourcetrail.cmake  licenses.cmake  productVersion.h.in
java_indexer/: CMakeLists.txt  java-indexer.launch  pom.xml
projects/: Linux-System-Multi-Config.srctrlprj  Linux-System-Release.srctrlprj  Linux-Vcpkg-Release.srctrlprj  Windows-Vcpkg-Release.srctrlprj
scripts/: install-system-build-dependencies.sh  install-vcpkg-build-dependencies.sh  install-vcpkg-dependencies.sh  resetPreferences.sh
src/app/: CMakeLists.txt  main.cpp
src/indexer/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt
src/lib/app/: Application.cpp  Application.h
src/lib/app/paths/: AppPath.cpp
src/lib/component/controller/: BookmarkController.cpp  BookmarkController.h  CodeController.cpp  CodeController.h  GraphController.cpp  ScreenSearchController.cpp  ScreenSearchController.h  TabsController.cpp  TabsController.h  TooltipController.cpp  TooltipController.h
src/lib/component/controller/helper/: ActivationListener.cpp  ActivationListener.h
src/lib/component/view/: GraphViewStyle.cpp  GraphViewStyle.h
src/lib/component/view/helper/: CodeSnippetParams.cpp  CodeSnippetParams.h
src/lib/data/: NodeKind.cpp  NodeKind.h  NodeType.cpp  NodeType.h  NodeTypeSet.cpp
src/lib/data/fulltextsearch/: FullTextSearchIndex.cpp  FullTextSearchIndex.h
src/lib/data/indexer/: TaskBuildIndex.cpp  TaskBuildIndex.h  TaskExecuteCustomCommands.cpp  TaskExecuteCustomCommands.h  TaskFillIndexerCommandQueue.cpp  TaskFillIndexerCommandQueue.h
src/lib/data/name/: NameDelimiterType.cpp  NameDelimiterType.h
src/lib/data/parser/: ParserClientImpl.cpp  SymbolKind.cpp  SymbolKind.h
src/lib/data/storage/: PersistentStorage.cpp  PersistentStorage.h  StorageAccess.h  StorageAccessProxy.cpp  StorageProvider.cpp  StorageProvider.h
src/lib/data/storage/sqlite/: SqliteBookmarkStorage.cpp  SqliteBookmarkStorage.h  SqliteIndexStorage.cpp  SqliteIndexStorage.h  SqliteStorage.cpp  SqliteStorage.h
src/lib/settings/: ApplicationSettings.h  ToolChain.cpp  ToolChain.h  ToolVersionSupport.cpp  ToolVersionSupport.h
src/lib/utility/: Id.h  LoopThread.cpp  LoopThread.h  Platform.cpp  Platform.h  Version.cpp  Version.h  utilityStl.h  utilityString.cpp  utilityString.h
src/lib/utility/file/: FilePath.cpp  FilePath.h  FileSystem.cpp  FileSystem.h  utilityFile.cpp
src/lib/utility/interprocess/: SharedMemory.h
src/lib/utility/logging/: FileLogger.cpp  FileLogger.h  LogManager.cpp  LogManager.h  LogManagerImplementation.cpp  LogManagerImplementation.h  LogMessage.cpp  LogMessage.h
src/lib/utility/messaging/: Message.h  MessageBase.h  MessageListener.h  MessageListenerBase.cpp  MessageListenerBase.h  MessageQueue.cpp  MessageQueue.h
src/lib/utility/scheduling/: Blackboard.cpp  Blackboard.h  TaskManager.cpp  TaskManager.h  TaskScheduler.cpp  TaskScheduler.h
src/lib_aidkit/: CMakeLists.txt
src/lib_aidkit/aidkit/: enum_class.cpp  enum_class.cppm  shared_data.cpp  shared_data.cppm  thread_shared.hpp
src/lib_aidkit/aidkit/concurrent/: blocking_queue.cpp  blocking_queue.hpp  thread_shared.hpp
src/lib_cxx/data/indexer/: IndexerCommandCxx.cpp
src/lib_cxx/data/parser/cxx/: CanonicalFilePathCache.cpp  ClangInvocationInfo.cpp  CxxAstVisitor.cpp  CxxAstVisitor.h  CxxAstVisitorComponent.h  CxxAstVisitorComponentIndexer.cpp  CxxAstVisitorComponentIndexer.h  CxxDiagnosticConsumer.cpp  CxxDiagnosticConsumer.h  CxxParser.cpp  PreprocessorCallbacks.cpp  PreprocessorCallbacks.h  SingleFrontendActionFactory.cpp  SingleFrontendActionFactory.h  utilityClang.cpp  utilityClang.h
src/lib_cxx/project/: SourceGroupCxxCdb.cpp  SourceGroupCxxEmpty.cpp  utilitySourceGroupCxx.cpp  utilitySourceGroupCxx.h
src/lib_cxx/utility/: CompilationDatabase.cpp
src/lib_gui/: CMakeLists.txt
src/lib_gui/platform/: setupApp.cpp  setupApp.h
src/lib_gui/qt/element/bookmark/: QtBookmark.cpp  QtBookmark.h  QtBookmarkCategory.cpp  QtBookmarkCategory.h
src/lib_gui/qt/element/code/: QtCodeArea.cpp  QtCodeArea.h  QtCodeField.cpp  (+2 more)
src/lib_gui/qt/graphics/: QtGraphicsView.cpp  QtGraphicsView.h
src/lib_gui/qt/project_wizard/: QtProjectWizard.cpp
src/lib_gui/qt/utility/: QtFileDialog.cpp  QtFileDialog.h  QtHelpButtonInfo.cpp  QtHighlighter.cpp  QtHighlighter.h  QtThreadedFunctor.cpp  QtThreadedFunctor.h  compatibilityQt.cpp  compatibilityQt.h  utilityQt.cpp  utilityQt.h
src/lib_gui/qt/view/: QtBookmarkButtonsView.cpp  QtGraphView.cpp  QtGraphView.h
src/lib_gui/qt/window/: QtAbout.cpp  QtActions.cpp  QtMainWindow.cpp  QtPreferencesWindow.cpp  QtStartScreen.cpp  QtWindow.cpp  QtWindowBase.cpp
src/lib_gui/utility/: utilityApp.cpp  utilityApp.h  utilityPathDetection.cpp
src/lib_java/utility/: utilityJava.cpp  utilityJava.h  utilityMaven.cpp
src/resources/graph_view/: graph_view.css
src/resources/main/: main.css
src/test/: CMakeLists.txt  CompilationDatabaseTestSuite.cpp  CxxParserTestSuite.cpp  JavaIndexSampleProjectsTestSuite.cpp  LogManagerTestSuite.cpp  MessageQueueTestSuite.cpp  Snippet.cpp  SourceGroupTestSuite.cpp  TaskSchedulerTestSuite.cpp  ToolChainTestSuite.cpp  UtilityStlTestSuite.cpp  test_main.cpp
src/test/helper/: TestStorage.cpp  TestStorage.h
src/test_aidkit/: CMakeLists.txt  enum_class_test.cpp  shared_data_test.cpp  thread_shared_test.cpp
src/test_aidkit/concurrent/: blocking_queue_test.cpp  thread_shared_test.cpp
testing/usages/: CMakeLists.txt  CMakePresets.json  Usages.srctrlprj
testing/usages/data/: cast_usages.cpp  module_a_exporter.cpp  module_a_exporter.cppm  module_b_exporter.cpp  module_b_exporter.cppm  module_import.cpp  module_importer.cpp
vcpkg-custom-triplets/: custom-arm64-osx.cmake
vcpkg-overlay-ports/llvm/: ReadMe.md  portfile.cmake  vcpkg.json
vcpkg-triplets/: x64-arm64-linux-windows-osx-static-md.cmake
(+41 files in other folders)
